test_regress/t/t_func_recurse_param.out
%Error-UNSUPPORTED: t/t_func_recurse_param.v:9:27: Unsupported: Recursive function or task call: 'recurse_self'
                                                 : ... In instance t
    9 |    function automatic int recurse_self;
      |                           ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_func_recurse_param.v:15:26: Expecting expression to be constant, but can't determine constant for FUNCREF 'recurse_self'
                                      : ... In instance t
        t/t_func_recurse_param.v:9:27: ... Location of non-constant FUNC 'recurse_self': Unsupported: Recursive constant functions
   15 |    localparam int ZERO = recurse_self(0);
      |                          ^~~~~~~~~~~~
%Error: t/t_func_recurse_param.v:16:28: Expecting expression to be constant, but can't determine constant for FUNCREF 'recurse_self'
                                      : ... In instance t
        t/t_func_recurse_param.v:9:27: ... Location of non-constant FUNC 'recurse_self': Unsupported: Recursive constant functions
   16 |    localparam int ELEVEN = recurse_self(3);
      |                            ^~~~~~~~~~~~
%Error: Exiting due to
